@@ -11,7 +11,6 @@ import java.net.InetAddress;
 import java.net.MulticastSocket;
 import java.net.SocketTimeoutException;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
 import net.fabricmc.api.EnvType;
@@ -19,6 +18,7 @@ import net.fabricmc.api.Environment;
 import net.minecraft.client.network.LanServerInfo;
 import net.minecraft.client.network.LanServerPinger;
 import net.minecraft.util.logging.UncaughtExceptionLogger;
+import org.jetbrains.annotations.Nullable;
 import org.slf4j.Logger;
 
 @Environment(value=EnvType.CLIENT)
@@ -75,16 +75,14 @@ public class LanServerQueryManager {
         private final List<LanServerInfo> serverEntries = Lists.newArrayList();
         private boolean dirty;
 
-        public synchronized boolean needsUpdate() {
-            return this.dirty;
-        }
-
-        public synchronized void markClean() {
-            this.dirty = false;
-        }
-
-        public synchronized List<LanServerInfo> getServers() {
-            return Collections.unmodifiableList(this.serverEntries);
+        @Nullable
+        public synchronized List<LanServerInfo> getEntriesIfUpdated() {
+            if (this.dirty) {
+                List<LanServerInfo> list = List.copyOf(this.serverEntries);
+                this.dirty = false;
+                return list;
+            }
+            return null;
         }
 
         public synchronized void addServer(String announcement, InetAddress address) {
